--- a/qrSystemFron/package.json
+++ b/qrSystemFron/package.json
@@ -10,7 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@fortawesome/fontawesome-free": "^6.4.2",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/material": "^5.15.15",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
     "file-saver": "^2.0.5",
