--- a/qrSystemFron/package.json
+++ b/qrSystemFron/package.json
@@ -14,18 +14,19 @@
     "@emotion/styled": "^11.11.5",
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@mui/icons-material": "^5.15.15",
-    "@mui/material": "^5.15.15",
+    "@mui/material": "^5.15.17",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
     "file-saver": "^2.0.5",
     "mdb-react-ui-kit": "^7.0.0",
-    "react": "^18.2.0",
+    "react": "^17.0.0 || ^18.0.0",
     "react-bootstrap": "^2.9.1",
     "react-datepicker": "^4.24.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^17.0.0 || ^18.0.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.18.0",
     "react-spinners": "^0.13.8",
+    "react-spreadsheet": "^0.9.4",
     "reactjs-popup": "^2.0.6",
     "sweetalert2": "^11.10.1",
     "sweetalert2-react-content": "^5.0.7",
@@ -40,5 +41,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "vite": "^4.4.5"
+  },
+  "peerDependencies": {
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0"
   }
 }
