--- a/qrSystemFron/package.json
+++ b/qrSystemFron/package.json
@@ -19,6 +19,8 @@
     "bootstrap-icons": "^1.11.3",
     "file-saver": "^2.0.5",
     "mdb-react-ui-kit": "^7.0.0",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.6.5",
     "react": "^17.0.0 || ^18.0.0",
     "react-bootstrap": "^2.9.1",
     "react-datepicker": "^4.24.0",
