--- a/package.json
+++ b/package.json
@@ -47,5 +47,7 @@
   "peerDependencies": {
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0"
-  }
+  },
+  "proxy": "https://stocksystemback-mxpi.onrender.com"
+
 }
